# splice-site-designer

./: .gitignore  README.md  TOOL_REPORT.md  Tetrahymena_intron_IC1.fasta  app.py  pyproject.toml  test_custom_intron.py  test_tetrahymena_live.py
group_i_intron_designer/: __init__.py  __main__.py  cli.py  construct_validation.py  designer.py  helix_drawer.py  intron_analyzer.py  models.py  primer_designer.py  report.py  sequence_utils.py  structural_parser.py  thermodynamics.py  validators.py
group_i_intron_designer/data/subtype_CMs/: IA1.cm  IA2.cm  IA3.cm  IB1.cm  IB2.cm  IB3.cm  IB4.cm  IC1.cm  IC2.cm  IC3.cm  ID.cm  IE1.cm  IE2.cm  IE3.cm
group_i_intron_designer/tests/: test_designer.py  test_helix_drawer.py  test_integration.py  test_intron_analyzer.py  test_library_modes.py  test_primer_designer.py  test_sequence_utils.py  test_thermodynamics.py
