[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "group-i-intron-designer"
version = "0.2.0"
description = "Design site-directed mutagenesis primers for group I intron P1/P1ex retargeting"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rafael"},
]

[project.optional-dependencies]
webapp = ["streamlit>=1.30"]
# Enables thermodynamic P1/P10 scoring (ViennaRNA duplex free energies +
# composition-controlled exon specificity).  Optional: the pipeline degrades
# gracefully to no scores when ViennaRNA is absent.
thermo = ["ViennaRNA>=2.5"]
all = ["streamlit>=1.30", "ViennaRNA>=2.5"]

[project.scripts]
group-i-intron-designer = "group_i_intron_designer.cli:main"

[tool.setuptools.packages.find]
include = ["group_i_intron_designer*"]

[tool.setuptools.package-data]
"group_i_intron_designer" = ["data/subtype_CMs/*.cm"]

[tool.pytest.ini_options]
testpaths = ["group_i_intron_designer/tests"]
